fix: removed wrong gaps

--- a/themes/headcrash/assets/scss/common/page-header.scss
+++ b/themes/headcrash/assets/scss/common/page-header.scss
@@ -29,7 +29,6 @@
     
     &__link {
         display: inline-block;
-        margin-block-end: var(--main-gap);
         padding-inline: calc(var(--main-gap) * 1.5);
         padding-block: calc(var(--main-gap) / 2);
         background-color: var(--light-bg-color-light);
