--- a/themes/headcrash/assets/scss/homepage/services/_index.scss
+++ b/themes/headcrash/assets/scss/homepage/services/_index.scss
@@ -67,6 +67,7 @@
     }
 
     &.services--aside {
+        padding: 0;
         background-color: transparent;
         color: var(--dark-text-color);
 
